--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1252,6 +1252,40 @@
                 </div>
               </div>
             </div>
+            <div class="top">
+              <img src="./img/thumb.jpeg" />
+              <div class="posting">
+                <div>
+                  <span class="comment">
+                    <a class="id" onclick="location.href='profile.html'">KingTiger</a>
+                    안녕하세요 나는 타이거입니다.
+                  </span>
+                  <div class="sprite_small_heart_icon_outline"></div>
+                  <div class="commentInfo">
+                    <span>1일</span>&nbsp;&nbsp;
+                    <span>좋아요 100개</span>&nbsp;
+                    <span>답글달기</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="top">
+              <img src="./img/thumb.jpeg" />
+              <div class="posting">
+                <div>
+                  <span class="comment">
+                    <a class="id" onclick="location.href='profile.html'">KingTiger</a>
+                    안녕하세요 나는 타이거입니다.
+                  </span>
+                  <div class="sprite_small_heart_icon_outline"></div>
+                  <div class="commentInfo">
+                    <span>1일</span>&nbsp;&nbsp;
+                    <span>좋아요 100개</span>&nbsp;
+                    <span>답글달기</span>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="buttons">
             <button class="like">
@@ -1301,6 +1335,7 @@
             <button class="submit">게시</button>
           </div>
         </div>
+        
       </div>
       <div class="previous" onclick="postPrevious();"></div>
       <div class="next" onclick="postNext();"></div>
