--- a/HTML/chat/main.html
+++ b/HTML/chat/main.html
@@ -662,9 +662,15 @@
             </div>
         </div>
         <div class="down">
-            <div class="chat-direct">
-                <div class="dir1"></div>
-            </div>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>  
         </div>
     </div>
     <div class="right">
