--- a/HTML/chat/index.html
+++ b/HTML/chat/index.html
@@ -1199,7 +1199,7 @@ html {height: 100%;}
     text-overflow: ellipsis;
     white-space: nowrap;
     background-color: rgb(var(--ig-primary-button));
-    --ig-primary-button: 0, 149, 246;
+    /*--ig-primary-button: 0, 149, 246;*/
     border: none;
 }
 
