--- a/HTML/chat/main.html
+++ b/HTML/chat/main.html
@@ -661,7 +661,7 @@
                 <img src="./img/free-icon-writing-6570264.png" alt="">
             </div>
         </div>
-        <div class="down">
+        <div class="dir2">
           <ul>
             <li>
                 <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
@@ -670,11 +670,134 @@
                     <p>안녕하세요.</p>
                 </div>
             </li>
-          </ul>  
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+                <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                <div class="profile">
+                    <p>dlafjd</p>
+                    <p>안녕하세요.</p>
+                </div>
+            </li>
+          </ul>
+
         </div>
     </div>
     <div class="right">
-
+      <div class="newdir1">
+        <img src="./img/free-icon-send-3482493.png" alt="보내기">
+        <span class="mydir">내 메시지</span>
+        <div class="fgbsm">친구나 그룹에 비공개 사진과 메시지를 보내세요.</div>
+        <button class="mes" type="button">메세지 보내기</button>
+      </div>
     </div>
   </div>
 </body>
