--- a/HTML/chat/main.html
+++ b/HTML/chat/main.html
@@ -595,7 +595,7 @@
       <div class="more_logout">
         <a href="">로그아웃</a>
       </div>
-  
+
       <!--게시글 작성 선택시 모달 팝업(</body>바깥부분에배치)-->
     <div id="modal_add_feed" class="modal modal_overlay">
       <div class="modal_window">
@@ -797,6 +797,65 @@
         <span class="mydir">내 메시지</span>
         <div class="fgbsm">친구나 그룹에 비공개 사진과 메시지를 보내세요.</div>
         <button class="mes" type="button">메세지 보내기</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- 메시지 보내기 모달 -->
+  <div class="container">
+    <div class="mes-wrap">
+      <div class="popup-mes">
+        <div class="popup-head">
+         
+          <div class="_ac7b _ac7c">
+            <div class="_ab8w  _ab94 _ab99 _ab9f _ab9m _ab9p  _ab9- _abcm">
+              <button class="_abl- _abm2" type="button">
+                <div class="_abm0">
+                  <svg aria-label="닫기" class="_ab6-" color="rgb(38, 38, 38)" fill="rgb(38, 38, 38)" height="18" role="img" viewBox="0 0 24 24" width="18"><polyline fill="none" points="20.643 3.357 12 12 3.353 20.647" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></polyline><line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" x1="20.649" x2="3.354" y1="20.649" y2="3.354"></line>
+                  </svg>
+                </div>
+              </button>
+            </div>
+          </div>
+          <h1 class="_ac78" tabindex="-1" style="width: calc(100% - 0px);">
+            <div class="_ac7a">새로운 메시지</div>
+          </h1>
+          <div class="_ac7b _ac7d">
+            <div class="_ab8w  _ab94 _ab99 _ab9f _ab9m _ab9p  _ab9- _abcm">
+              <button class="_acan _acao _acas _acav _aj1-" disabled type="button">
+                <div class="_aagz">다음</div>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="popup-body1">
+          <div class="">받는 사람:</div>
+          <div class="search">
+            <input type="text" class="popup-search" autocomplete="off" name="queryBox" placeholder="검색..." spellcheck="false">
+          </div>
+        </div>
+        <div class="popup-body2">
+          <div class="recommend1">
+            <div class="recommend2">
+              추천
+            </div>
+            <div class="f-list">
+              <ul>
+                <li>
+                    <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
+                    <div class="profile">
+                        <p>dlafjd</p>
+                        <p>안녕하세요.</p>
+                    </div>
+                    <div>
+                      <button class="mes-btn0"></button>
+                    </div>
+                </li>
+              </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
