--- a/HTML/chat/main.html
+++ b/HTML/chat/main.html
@@ -800,64 +800,25 @@
       </div>
     </div>
   </div>
-
-  <!-- 메시지 보내기 모달 -->
-  <div class="container">
-    <div class="mes-wrap">
-      <div class="popup-mes">
-        <div class="popup-head">
-         
-          <div class="_ac7b _ac7c">
-            <div class="_ab8w  _ab94 _ab99 _ab9f _ab9m _ab9p  _ab9- _abcm">
-              <button class="_abl- _abm2" type="button">
-                <div class="_abm0">
-                  <svg aria-label="닫기" class="_ab6-" color="rgb(38, 38, 38)" fill="rgb(38, 38, 38)" height="18" role="img" viewBox="0 0 24 24" width="18"><polyline fill="none" points="20.643 3.357 12 12 3.353 20.647" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></polyline><line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" x1="20.649" x2="3.354" y1="20.649" y2="3.354"></line>
-                  </svg>
-                </div>
-              </button>
-            </div>
-          </div>
-          <h1 class="_ac78" tabindex="-1" style="width: calc(100% - 0px);">
-            <div class="_ac7a">새로운 메시지</div>
-          </h1>
-          <div class="_ac7b _ac7d">
-            <div class="_ab8w  _ab94 _ab99 _ab9f _ab9m _ab9p  _ab9- _abcm">
-              <button class="_acan _acao _acas _acav _aj1-" disabled type="button">
-                <div class="_aagz">다음</div>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="popup-body1">
-          <div class="">받는 사람:</div>
-          <div class="search">
-            <input type="text" class="popup-search" autocomplete="off" name="queryBox" placeholder="검색..." spellcheck="false">
-          </div>
-        </div>
-        <div class="popup-body2">
-          <div class="recommend1">
-            <div class="recommend2">
-              추천
-            </div>
-            <div class="f-list">
-              <ul>
-                <li>
-                    <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="프로필사진">
-                    <div class="profile">
-                        <p>dlafjd</p>
-                        <p>안녕하세요.</p>
-                    </div>
-                    <div>
-                      <button class="mes-btn0"></button>
-                    </div>
-                </li>
-              </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+  <!--메시지 보내기 모달-->
+<div class="new-wrap">
+  <div class="new-head">
+    <div class="new-close">
+      <img src="./img/free-icon-close-4013407.png" alt="닫기">
+    </div>
+    <div class="new-mesg">
+      <h4>새로운 메시지</h4>
+    </div>
+    <div class="new-next">
+      <p>다음</p>
     </div>
   </div>
+  <div class="new-body1">
+
+  </div>
+  <div class="new-body2">
+
+  </div>  
+</div>
 </body>
 </html>
