--- a/HTML/chat/main.html
+++ b/HTML/chat/main.html
@@ -802,23 +802,33 @@
   </div>
   <!--메시지 보내기 모달-->
 <div class="new-wrap">
-  <div class="new-head">
-    <div class="new-close">
-      <img src="./img/free-icon-close-4013407.png" alt="닫기">
+  <div class="new-content">
+    <div class="new-head">
+      <div class="new-head-close">
+        <img src="./img/free-icon-close-4013407.png" alt="닫기">
+      </div>
+      <div class="new-head-mesg">
+        새로운 메시지
+      </div>
+      <div class="new-head-next">
+        <button class="btn-next">다음</button>
+      </div>
     </div>
-    <div class="new-mesg">
-      <h4>새로운 메시지</h4>
+    <div class="new-body1">
+      <div class="new-body1-1">
+        <div class="new-body1-2">
+          <h4 class="new-body1-3">받는 사람</h4>
+        </div>
+        <div class="new-body2">
+          <input class="new-body2-1" autocomplete="off" name="queryBox" placeholder="검색..." spellcheck="false" type="text">
+          <div></div>
+        </div>
+      </div>
     </div>
-    <div class="new-next">
-      <p>다음</p>
+    <div class="new-body2">
+
     </div>
   </div>
-  <div class="new-body1">
-
-  </div>
-  <div class="new-body2">
-
-  </div>  
 </div>
 </body>
 </html>
