--- a/HTML/chat/main.html
+++ b/HTML/chat/main.html
@@ -61,6 +61,11 @@
       });
       });
     </script>
+    <script>
+      $(function(){
+        
+      });
+    </script>
 </head>
 <body>
     <!--sidebar 기본-->
@@ -796,10 +801,11 @@
         <img src="./img/free-icon-send-3482493.png" alt="보내기">
         <span class="mydir">내 메시지</span>
         <div class="fgbsm">친구나 그룹에 비공개 사진과 메시지를 보내세요.</div>
-        <button class="mes" type="button">메세지 보내기</button>
+        <button class="mes" id="confirm" type="button">메세지 보내기</button>
       </div>
     </div>
   </div>
+
   <!--메시지 보내기 모달-->
 <div class="new-wrap">
   <div class="new-content">
@@ -817,7 +823,7 @@
     <div class="new-body1">
       <div class="new-body1-1">
         <div class="new-body1-2">
-          <h4 class="new-body1-3">받는 사람</h4>
+          <h4 class="new-body1-3">받는 사람: </h4>
         </div>
         <div class="new-body2">
           <input class="new-body2-1" autocomplete="off" name="queryBox" placeholder="검색..." spellcheck="false" type="text">
@@ -825,8 +831,33 @@
         </div>
       </div>
     </div>
-    <div class="new-body2">
-
+    <div class="new-body3">
+      <div class="recommend">
+        <div class="recommend-1">추천</div>
+      </div>
+      <div class="reco-list-wrap" aria-disabled="false" role="button" tabindex="0">
+        <div class="reco-list-main">
+          <div class="reco-list-img">
+            <span class="reco-list-img-1">
+              <img class="reco-list-img-real" src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="계정사진">
+            </span>
+          </div>
+          <div class="reco-id">
+            <div class="reco-id-1">
+              <div class="reco-id-2">
+                <div class="reco-id-3">dlafjd</div>
+              </div>
+            </div>
+            <div class="reco-name">
+              <div class="reco-name-1">
+                아무개</div>
+            </div>
+          </div>
+            <div class="reco-btn">
+              <input type="radio">
+            </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
