--- a/HTML/profile/new.html
+++ b/HTML/profile/new.html
@@ -1,264 +1,260 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Instagram</title>
-    <link
-      rel="stylesheet"
-      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
-    />
-    <link
-            href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
-            rel="stylesheet"/>
+<html>
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <style>
+    * {
+    margin: 0;
+    padding: 0;
+    font: normal 'Arial';
+}
 
-    <link rel="stylesheet" href="https://kit.fontawesome.com/2467fa7e8b.css" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/2467fa7e8b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/aside.css">
-    <link rel="stylesheet" href="./css/profile.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="../js/aside.js"></script>
-    <script>
-      $(function(){
-        //게시글 업로드 버튼 클릭시(ajax추가하면 됨)
-      $('#button_write_feed').on('click', ()=>{
-        const image = $('#input_image').css("background-image").replace(/^url\(['"](.+)['"]\)/, '$1');
-        const content = $('#input_content').val();
-        const profile_image = $('#input_profile_image').attr('src');
-        const user_id = $('#input_user_id').text();
+ul, ol {list-style: none;}
+a {text-decoration: none; color: #111;}
+input, textarea {outline: none;}
 
-        const file = files[0];
+#pro {
+    width: 1000px;
+    margin-top:20px;
+    margin-left:500px;
+}
+#pro > section {width: 100%;}
+#pro > section > div {display: block;}
 
-        let fd = new FormData();
+#pro > section > .myProfile {
+    width: 100%;
+    height: 200px;
+    position: relative; 
+    display: block; 
+    border-bottom: 1px solid #e9e9e9; 
+}
+#pro > section > .myProfile > .proPhoto {
+    float: left; 
+    margin-top: 20px; 
+    margin-left:100px; 
+    margin-right:100px; 
+    width: 200px;
+}
+#pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
+#pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
+#pro > section > .myProfile > .proPhoto > div > a > img {width: 100%; height: 100%; object-fit: cover;}
+#pro > section > .myProfile > .detail {float:left; width:500px;}
+#pro > section > .myProfile > .detail > .pTop {
+    display: block; 
+    margin-top: 30px; 
+    position: relative; 
+    width: auto; 
+    height: 40px;
+}
+#pro > section > .myProfile > .detail > .pTop > .userName {
+    float:left; 
+    padding-right:15px; 
+    font-size: 24px;
+    height: 40px;
+    line-height: 40px;
+}
+#pro > section > .myProfile > .detail > .pTop > .button {
+    margin: 2px;
+    padding: 9px 15px;
+    background: #e9e9e9;
+    font-size: 13px;
+    top: 10px;
+    position: inherit;
+}
+#pro > section > .myProfile > .detail > .pTop > #follow {
+    background: #32a4ff; 
+    color: aliceblue; 
+    font-weight: bold;
+}
+#pro > section > .myProfile > .detail > .pMiddle {
+    display: block; 
+    margin-top: 20px; 
+    width: 500px; 
+    height: 40px; 
+    overflow: hidden;
+}
+#pro > section > .myProfile > .detail > .pMiddle > li {
+    box-sizing: border-box; 
+    margin-right:35px; 
+    float: left;
+    font-size:15px;
+    width: 100px;
+}
+#pro > section > .myProfile > .detail > .pMiddle > li > span {
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 5px;
+}
+#pro > section > .myProfile > .detail > .pMiddle > li > a {font-size:15px;}
+#pro > section > .myProfile > .detail > .pMiddle > li > a > span {font-size:16px; font-weight:bold; margin-left:5px;}
 
-        fd.append('file', file);
-        fd.append('image', image);
-        fd.append('content', content);
-        fd.append('profile_image', profile_image);
-        fd.append('user_id', user_id);
+#pro > section > .myProfile > .detail > .pAbout > .notice {font-size: 15px;}
 
-        if(image.length <= 0)
-        {
-            alert("이미지가 비어있습니다.");
-        }
-        else if(content.length <= 0)
-        {
-            alert("설명을 입력하세요");
-        }
-        else if(profile_image.length <= 0)
-        {
-            alert("프로필 이미지가 비어있습니다.");
-        }
-        else if(user_id.length <= 0)
-        {
-            alert("사용자 id가 없습니다.");
-        }
-        else{
-            writeFeed(fd);
-            console.log(files[0]);
-        }
-      });
-      });
-    </script>
-    <!-- follow, following 스타일 변화 -->
-    <script>
-      $(function(){
-        $('#follow').click(function(){
-          $('#follow').hide();
-          $('#following').show();
-        });
-      });
-      $(function(){
-        $('#unFollow').click(function(){
-          $('#following').hide();
-          $('#follow').show();
-        });
-      $(function(){
-        $('.fClose').click(function(){
-          $('#fCancel').hide();
-        });
-      });
-      });
-    </script>
-    <!-- modal 창 띄우기 -->
-    <script>
-      $(function(){
-        var modal = document.getElementById("fCancel");
-        var btn = document.getElementById("following");
-        var span = document.getElementsByClassName("fClose")[0];
+#pro > section > .myNav {
+    padding-top: 30px; 
+    width: 400px; 
+    margin-right: 300px; 
+    margin-left: 300px; 
+    text-align: center;
+}
+#pro > section > .myNav > div:nth-child(1) {margin-left: 50px;}
+#pro > section > .myNav > div {
+    float: left; 
+    padding-left: 30px; 
+    padding-right: 30px;
+}
+#pro > section > .myNav > div > a {color: #888;}
+#pro > section > .myNav > div > a:hover {color: #111;}
 
-        btn.onclick = function() {
-          modal.style.display = "block";
-        }
+#pro > section > .myList {margin-top: 50px;}
+#pro > section > .myList > .pic {
+    float:left;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    margin: 5px; 
+    overflow: hidden;
+}
+#pro > section > .myList > .pic > a {display: block;} 
+#pro > section > .myList > .pic > a > img {width: 100%; height: 100%; object-fit:cover;}
 
-        span.onclick = function() {
+  .fModal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0,0,0,0.4);
+    -ms-overflow-style: none;
+  }
+  .fModal::-webkit-scrollbar {display: none;}
+
+  .fContents {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 400px;
+    border-radius: 10px;
+  }
+
+  .fContents > #fTop {margin-left: 135px; width:55px; position: relative; text-align: center;padding: 20px;}
+  .fContents > #fTop > img {display: inline-block; width: 55px; height: auto; vertical-align: middle;}
+  .fContents > #fTop > span {display: inline-block; width: 55px; height: auto; vertical-align: middle; font-size: 14px; font-weight: bold; margin-top: 5px;}
+  .fContents > #fBottom {border-top: 1px solid #e9e9e9;}
+  .fContents > #fBottom > li {display: block; height: 40px; box-sizing: border-box;}
+  .fContents > #fBottom > li > a {top: 14px; position: relative; float: left; display: block; width: 350px; font-size: 14px; }
+  .fContents > #fBottom > li > a > span {float:left; font-size:14px;}
+  .fContents > #fBottom > li > a > i {float: right;}
+
+  .fClose {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+  }
+
+  .fClose:hover,
+  .fClose:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .addProf:hover,
+  .addProf:focus {
+    cursor: pointer;
+  }
+
+  </style>
+  <script>
+    $(function(){
+      var modal = document.getElementById("fCancel");
+      var btn = document.getElementById("following");
+      var span = document.getElementsByClassName("fClose")[0];
+
+      btn.onclick = function() {
+        modal.style.display = "block";
+      }
+
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+
+      window.onclick = function(event) {
+        if (event.target == modal) {
           modal.style.display = "none";
         }
-
-        window.onclick = function(event) {
-          if (event.target == modal) {
-            modal.style.display = "none";
-          }
-        }
-      });
-    </script>
-    <style>
-      #following {display: none;}
-
-      .fModal {
-        display: none; 
-        position: fixed; 
-        z-index: 1; 
-        left: 0;
-        top: 0;
-        width: 100%; 
-        height: 100%; 
-        overflow: hidden; 
-        background-color: rgba(0,0,0,0.4); 
-        -ms-overflow-style: none;
       }
-      .fModal::-webkit-scrollbar {display: none;}
-
-      .fContents {
-        background-color: #fefefe;
-        margin: 15% auto; 
-        padding: 20px;
-        border: 1px solid #888;
-        width: 400px; 
-        border-radius: 10px;
-      }
-
-      .fContents > #fTop {margin-left: 135px; width:55px; position: relative; text-align: center;padding: 20px;}
-      .fContents > #fTop > img {display: inline-block; width: 55px; height: auto; vertical-align: middle;}
-      .fContents > #fTop > span {display: inline-block; width: 55px; height: auto; vertical-align: middle; font-size: 14px; font-weight: bold; margin-top: 5px;}
-      .fContents > #fBottom {border-top: 1px solid #e9e9e9;}
-      .fContents > #fBottom > li {height:40px; display: block; height: 40px; box-sizing: border-box;}
-      .fContents > #fBottom > li > a {top: 14px; position: relative; float: left; display: block; width: 350px; font-size: 14px; }
-      .fContents > #fBottom > li > a > span {float:left;}
-      .fContents > #fBottom > li > a > i {float: right;}
-
-      .fClose {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-      }
-
-      .fClose:hover,
-      .fClose:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-      }
-
-    </style>
-  </head>
-  <body>
-    <!--더보기 선택시 팝업-->
-    <div class="more_logout">
-      <a href="">로그아웃</a>
-    </div>
-<main id="wrapper">
-  <section>
-      <div class="myProfile">
-          <div class="proPhoto">
-              <div>
-                  <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
+    });
+  </script>
+</head>
+<body>
+        <div id="pro">
+          <section>
+              <div class="myProfile">
+                  <div class="proPhoto">
+                      <div>                    
+                        <input type="file" class="real-addProf" accept="image/*" style="display: none;"/>
+                              <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile" class="addProf" id="profilePhoto"/>
+                      </div>
+                  </div>
+                  <div class="detail">
+                      <div class="pTop">
+                          <div class="userName">username</div>
+                              <a href="#" class="button">프로필 편집</a>
+                                  <a href="#" class="button" id="following">팔로잉</a>
+                                  <a href="#" class="button" id="follow">팔로우</a>
+                      </div>
+                      <ul class="pMiddle">
+                          <li>
+                              게시물<span>3</span>
+                          </li>
+                          <li>
+                              <a id="followModal" href="#">팔로워<span>3</span></a>
+                          </li>
+                          <li>
+                              <a id="followingModal" href="#">팔로잉<span>3</span></a>
+                          </li>
+                      </ul>
+                      <p class="pAbout">
+                          <span class="notice">
+                              소개
+                          </span>
+                      </p>
+                  </div>
               </div>
-          </div>
-          <div class="detail">
-              <div class="pTop">
-                  <div class="userName">gildong</div>
-                  <a href="#" class="button" id="follow">팔로우</a>
-                  <a href="#" class="button" id="following">팔로잉</a>
-                  <a href="#" class="button">프로필 편집</a>
+              <div class="myNav">
+                  <div><a href="#">게시물</a></div>
+                  <div><a href="#">릴스</a></div>
+                  <div><a href="#">태그됨</a></div>
               </div>
-              <ul class="pMiddle">
-                  <li>
-                      <span>게시물</span>3
-                  </li>
-                  <li>
-                      <a href="#"><span>팔로워</span>3</a>
-                  </li>
-                  <li>
-                    <a href="#"><span>팔로잉</span>3</a>
-                  </li>
-              </ul>
-              <p class="pAbout">
-                  <span class="notice">
-                      홍길동
-                  </span>
-              </p>
-          </div>
-      </div>
-      <div class="myNav">
-          <div><a href="#">게시물</a></div>
-          <div><a href="#">릴스</a></div>
-          <div><a href="#">태그됨</a></div>
-      </div>
-      <div class="myList">
-          <div class="pic">
-              <a href="#">
-                  <img src="./img/300x300-1.png">
-              </a>
-          </div>
-          <div class="pic">
-              <a href="#">
-                  <img src="./img/300x300-1.png">
-              </a>
-          </div>
-          <div class="pic">
-              <a href="#">
-                  <img src="./img/300x300-1.png">
-              </a>
-          </div>
-          <div class="pic">
-              <a href="#">
-                  <img src="./img/300x300-1.png">
-              </a>
-          </div>
-          <div class="pic">
-              <a href="#">
-                  <img src="./img/300x300-1.png">
-              </a>
-          </div>
-          <div class="pic">
-              <a href="#">
-                  <img src="./img/300x300-1.png">
-              </a>
-          </div>
-          <div class="pic">
-              <a href="#">
-                  <img src="./img/300x300-1.png">
-              </a>
-          </div>
-          <div class="pic">
-              <a href="#">
-                  <img src="./img/300x300-1.png">
-              </a>
-          </div>
-          <div class="pic">
-              <a href="#">
-                  <img src="./img/300x300-1.png">
-              </a>
-          </div>
-      </div>
-  </section>
-  <div id="fCancel" class="fModal">
-    <div class="fContents">
-      <span class="fClose">&times;</span>
-      <div id="fTop">
-        <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
-        <span>gildong</span>
-      </div>
-      <ul id="fBottom">
-        <li><a href="#" class="fClose"><span>친한 친구 리스트에 추가</span><i class="fa-solid fa-star"></i></a></li>
-        <li><a href="#" class="fClose"><span>즐겨찾기에에 추가</span><i class="fa-regular fa-star"></i></a></li>
-        <li><a href="#" class="fClose"><span>일시 차단</span><i class="fa-solid fa-chevron-right"></i></a></li>
-        <li><a href="#" class="fClose"><span>제한</span><i class="fa-solid fa-chevron-right"></i></a></li>
-        <li ><a href="#" id="unFollow" class="fClose">팔로우 취소</a></li>
-      </ul>
-    </div>
-  </div>
-</main>
-<footer></footer>
-  </body>
+                  <div class="myList">
+                    <h1>게시물이 없습니다.</h1>
+                  </div>
+          </section>
+            <div id="fCancel" class="fModal">
+                <div class="fContents">
+                    <span class="fClose">&times;</span>
+                    <div id="fTop">
+                        <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
+                        <span>username</span>
+                    </div>
+                    <ul id="fBottom">
+                        <li><a href="#" class="fClose"><span>친한 친구 리스트에 추가</span><i class="fa-solid fa-star"></i></a></li>
+                        <li><a href="#" class="fClose"><span>즐겨찾기에 추가</span><i class="fa-regular fa-star"></i></a></li>
+                        <li><a href="#" class="fClose"><span>일시 차단</span><i class="fa-solid fa-chevron-right"></i></a></li>
+                        <li><a href="#" class="fClose"><span>제한</span><i class="fa-solid fa-chevron-right"></i></a></li>
+                        <li><a href="#" id="unFollow" class="fClose">팔로우 취소</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <footer>
+
+        </footer>
+        </body>
 </html>
