--- a/HTML/profile/new.html
+++ b/HTML/profile/new.html
@@ -169,6 +169,64 @@ input, textarea {outline: none;}
     cursor: pointer;
   }
 
+  /*** 여기서부터 new ***/
+
+  
+  .peopleFollow {
+    background-color: #fefefe;
+    margin: 15% auto;
+    border: 1px solid #888;
+    width: 400px;
+    border-radius: 10px;
+  }
+
+  .closeFollow {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    margin-right: 5px;
+  }
+
+  .closeFollow:hover,
+  .closeFollow:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .closeFollowing {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    margin-right: 5px;
+  }
+
+  .closeFollowing:hover,
+  .closeFollowing:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .fList {width: 380px; height:374px; padding: 10px; overflow-y: scroll;}
+
+  .peopleFollow > div {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    border-bottom: 1px solid #e9e9e9;
+    font-weight: bold;
+  }
+  .fList > li {width: 350px; height: 45px; display: inline-block; padding: 5px;}
+  .fList > li > a {display: block; width: 350px; height: 45px; line-height: 45px;}
+  .fList > li > a > h1 {height: 45px; float: left; font-size: 14px; margin-left: 10px; vertical-align: middle;}
+  .fList > li > a > img {line-height: 55px; float: left; width: 45px; vertical-align: middle;}
+
+
+
+  
+
   </style>
   <script>
     $(function(){
@@ -191,6 +249,50 @@ input, textarea {outline: none;}
       }
     });
   </script>
+  <script>
+    $(function(){
+      var modal = document.getElementById("followerModalWindow");
+      var btn = document.getElementById("followerModal");
+      var span = document.getElementsByClassName("closeFollow")[0];
+
+      btn.onclick = function() {
+        modal.style.display = "block";
+      }
+
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+
+      window.onclick = function(event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        } 
+      }
+
+    });
+  </script>
+  <script>
+    $(function(){
+      var modal = document.getElementById("followingModalWindow");
+      var btn = document.getElementById("followingModal");
+      var span = document.getElementsByClassName("closeFollowing")[0];
+
+      btn.onclick = function() {
+        modal.style.display = "block";
+      }
+
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+
+      window.onclick = function(event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        } 
+      }
+
+    });
+  </script>
 </head>
 <body>
         <div id="pro">
@@ -206,15 +308,15 @@ input, textarea {outline: none;}
                       <div class="pTop">
                           <div class="userName">username</div>
                               <a href="#" class="button">프로필 편집</a>
-                                  <a href="#" class="button" id="following">팔로잉</a>
-                                  <a href="#" class="button" id="follow">팔로우</a>
+                                  <a class="button" id="following">팔로잉</a>
+                                  <a class="button" id="follow">팔로우</a>
                       </div>
                       <ul class="pMiddle">
                           <li>
                               게시물<span>3</span>
                           </li>
                           <li>
-                              <a id="followModal" href="#">팔로워<span>3</span></a>
+                              <a id="followerModal" href="#">팔로워<span>3</span></a>
                           </li>
                           <li>
                               <a id="followingModal" href="#">팔로잉<span>3</span></a>
@@ -238,23 +340,109 @@ input, textarea {outline: none;}
           </section>
             <div id="fCancel" class="fModal">
                 <div class="fContents">
-                    <span class="fClose">&times;</span>
-                    <div id="fTop">
-                        <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
-                        <span>username</span>
+                  <span class="fClose">&times;</span>
+                  <div id="fTop">
+                      <img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile">
+                      <span>username</span>
+                  </div>
+                  <ul id="fBottom">
+                      <li><a href="#" class="fClose"><span>친한 친구 리스트에 추가</span><i class="fa-solid fa-star"></i></a></li>
+                      <li><a href="#" class="fClose"><span>즐겨찾기에 추가</span><i class="fa-regular fa-star"></i></a></li>
+                      <li><a href="#" class="fClose"><span>일시 차단</span><i class="fa-solid fa-chevron-right"></i></a></li>
+                      <li><a href="#" class="fClose"><span>제한</span><i class="fa-solid fa-chevron-right"></i></a></li>
+                      <li><a href="#" id="unFollow" class="fClose">팔로우 취소</a></li>
+                  </ul>
+                </div>
+            </div>
+            <div id="followerModalWindow" class="fModal">
+                <div class="peopleFollow">
+                    <div>
+                      팔로워
+                      <span class="closeFollow">&times;</span>
                     </div>
-                    <ul id="fBottom">
-                        <li><a href="#" class="fClose"><span>친한 친구 리스트에 추가</span><i class="fa-solid fa-star"></i></a></li>
-                        <li><a href="#" class="fClose"><span>즐겨찾기에 추가</span><i class="fa-regular fa-star"></i></a></li>
-                        <li><a href="#" class="fClose"><span>일시 차단</span><i class="fa-solid fa-chevron-right"></i></a></li>
-                        <li><a href="#" class="fClose"><span>제한</span><i class="fa-solid fa-chevron-right"></i></a></li>
-                        <li><a href="#" id="unFollow" class="fClose">팔로우 취소</a></li>
+                    <ul class="fList">
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                        <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
                     </ul>
                 </div>
             </div>
+            <div id="followingModalWindow" class="fModal">
+              <div class="peopleFollow">
+                  <div>
+                    팔로잉
+                    <span class="closeFollowing">&times;</span>
+                  </div>
+                  <ul class="fList">
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                      <li><a href="#"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="profile"><h1>username</h1></a></li>
+                  </ul>
+              </div>
+          </div>
         </div>
         <footer>
-
+          <div>
+            <a href="#">Meta</a>
+            <a href="#">소개</a>
+            <a href="#">블로그</a>
+            <a href="#">채용 정보</a>
+            <a href="#">도움말</a>
+            <a href="#">API</a>
+            <a href="#">개인정보처리방침</a>
+            <a href="#">약관</a>
+            <a href="#">인기 계정</a>
+            <a href="#">위치</a>
+            <a href="#">Instagram Lite</a>
+            <a href="#">연락처 업로드 & 비사용자</a>
+            <a href="#">Meta Verified</a>
+          </div>
+          <div>
+            <a href="#">한국어</a>
+            <a>ⓒ 2023 Photostagram from Meta</a>
+          </div>
         </footer>
         </body>
 </html>
