--- a/HTML/chat/content.html
+++ b/HTML/chat/content.html
@@ -851,11 +851,34 @@ $(document).on("click", function(e){
                     </div>
                 </div>
                 <div class="chat-head-add">
-                    <div class="chat-head-add">
-                        <img src="" alt="">
+                    <div class="chat-head-add-0">
+                        <img src="./img/free-icon-telephone-4544272.png" alt="음성 통화">
+                    </div>
+                    <div class="chat-head-add-1">
+                      <img src="./img/free-icon-videos-4353992.png" alt="영상 통화">
+                    </div>
+                    <div class="chat-head-add-2">
+                      <img src="./img/free-icon-info-5258991.png" alt="상세정보">
                     </div>
                 </div>
             </div>
+        </div>
+      </div>
+      <div class="chat-main-content">
+        <div class="chat-main-content-1">
+          <div class="chat-main-content-2">
+            <div class="chat-main-content-3">
+              <div>
+                <div>
+                  <div>
+                    <div>
+                      
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
