--- a/HTML/chat/content.html
+++ b/HTML/chat/content.html
@@ -864,23 +864,46 @@ $(document).on("click", function(e){
             </div>
         </div>
       </div>
-      <div class="chat-main-content">
-        <div class="chat-main-content-1">
-          <div class="chat-main-content-2">
-            <div class="chat-main-content-3">
-              <div>
-                <div>
-                  <div>
-                    <div>
-                      
-                    </div>
-                  </div>
-                </div>
-              </div>
+      <div class="wrap">
+        <div class="chat ch1">
+            <div class="icon"><img class="" src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="계정사진"></div>
+            <div class="textbox">안녕하세요.</div>
+        </div>
+        <div class="chat ch2">
+            <div class="textbox">안녕하세요. 반갑습니다.</div>
+        </div>
+        <div class="chat ch1">
+            <div class="icon"><img src="./img/44884218_345707102882519_2446069589734326272_n.jpg" alt="계정사진"></div>
+            <div class="textbox">반갑습니다</div>
+        </div>
+        <div class="chat ch2">
+            <div class="textbox">....</div>
+        </div>
+    </div>
+    <div class="chatbox">
+      <div class="chatboxem-1">
+        <div class="chatboxem-2">
+          <div class="mj">
+            <div class="chatboxem-3">
+              <img src="./img/free-icon-smiling-emoticon-square-face-42877.png" alt="이모티콘">
+            </div>
+          </div>
+          <div class="chatbox-box">
+            <textarea placeholder="메시지 입력..." class="chatbox-box-1"></textarea>
+          </div>
+          <div class="chatg">
+            <div class="chatg-1">
+              <img src="./img/free-icon-gallery-4348117.png" alt="갤러리">
+            </div>
+          </div>
+          <div class="chath">
+            <div class="chath-1">
+              <img src="./img/free-icon-heart-shape-3717486.png" alt="좋아요">
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 
